@@ -1,10 +1,11 @@
 # ChangeLog for sys-apps/baselayout
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.33 2002/09/05 06:37:38 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.34 2002/09/05 21:32:23 azarah Exp $
 
   5 Sep 2002; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.2.ebuild :
   Remove /etc/termcap.  Anything that needs it, should depend on
-  sys-libs/libtermcap-compat.
+  sys-libs/libtermcap-compat.  Some cleanups; should have passwd and
+  shadow back in CONTENTS.
 
   26 Aug 2002; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.2.ebuild :
   Tweak DEPEND to depend on portage-2.0.23 or later.  Also remove the '!'
